Código do segundo dia de aula

--- a/index.html
+++ b/index.html
@@ -2,28 +2,72 @@
 <html lang="pt-br">
   <head>
     <title>Wendel Santos - DoWhile 2021</title>
-    <style>
-      html,
-      body {
-        height: 100%;
-      }
-      body {
-        display: grid;
-        place-items: center;
-      }
-      h1 {
-        font-size: 1.5rem;
-      }
-      a {
-        color: lightgray;
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Wendel Santos</h1>
-    <p>
-      <a href="https://www.linkedin.com/in/wendel-nunes">@WendelNunes</a>
-    </p>
+    <main>
+      <div class="avatar">
+        <span>
+          <img src="img/build.svg" alt="Selo Rocketseat" />
+        </span>
+        <img src="img/Avatar.png" alt="Foto pessoal" />     
+      </div>
+
+      <div class="container">
+        <h1>Wendel Santos</h1>
+        <a href="https://www.linkedin.com/in/wendel-nunes">
+          <img src="img/github.svg" alt="icone github" />
+          WendelNunes
+        </a>
+        <p>An instructor focused on helping pople start programming for web</p>
+        <ul>
+          <li>
+            <a href="https:youtube.com/maykbrito"
+              ><img
+                src="img/youtube.svg"
+                alt="Ícone do youtube"
+                target="_blank"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https:facebook.com/maykbrito"></a>
+              <img
+                src="img/facebook.svg"
+                alt="Ícone do youtube"
+                target="_blank"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.instagram.com/wendelnunes1/">
+              <img
+                src="img/instagram.svg"
+                alt="Ícone do youtube"
+                target="_blank"
+              />
+            </a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/WendelN96410536">
+              <img
+                src="img/twitter.svg"
+                alt="Ícone do youtube"
+                target="_blank"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
+
+<!-- #RumoAoPróximoNível - 1-->
+<!-- #Protagonistas-->
