Atualização de código

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <title>Wendel Santos - DoWhile 2021</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -13,7 +16,7 @@
         <span>
           <img src="img/build.svg" alt="Selo Rocketseat" />
         </span>
-        <img src="img/Avatar.png" alt="Foto pessoal" />     
+        <img src="img/Avatar.png" alt="Foto pessoal" />
       </div>
 
       <div class="container">
@@ -25,42 +28,26 @@
         <p>An instructor focused on helping pople start programming for web</p>
         <ul>
           <li>
-            <a href="https:youtube.com/maykbrito"
-              ><img
-                src="img/youtube.svg"
-                alt="Ícone do youtube"
-                target="_blank"
-              />
+            <a href="https:youtube.com/maykbrito" target="_blank">
+              <img src="img/youtube.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
           <li>
-            <a href="https:facebook.com/maykbrito"></a>
-              <img
-                src="img/facebook.svg"
-                alt="Ícone do youtube"
-                target="_blank"
-              />
+            <a href="https:facebook.com/maykbrito" target="_blank">
+              <img src="img/facebook.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
           <li>
-            <a href="https://www.instagram.com/wendelnunes1/">
-              <img
-                src="img/instagram.svg"
-                alt="Ícone do youtube"
-                target="_blank"
-              />
+            <a href="https://www.instagram.com/wendelnunes1/ " target="_blank">
+              <img src="img/instagram.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
           <li>
-            <a href="https://twitter.com/WendelN96410536">
-              <img
-                src="img/twitter.svg"
-                alt="Ícone do youtube"
-                target="_blank"
-              />
+            <a href="https://twitter.com/WendelN96410536" target="_blank">
+              <img src="img/twitter.svg" alt="Ícone do youtube" />
             </a>
           </li>
         </ul>
