--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
       </div>
 
       <div class="container">
-        <h1>Wendel Santos</h1>
-        <a href="https://www.linkedin.com/in/wendel-nunes">
+        <h1 id="userName">Wendel Santos</h1>
+        <a href="https://github.com/WendelSantosNunes" target="_blank">
           <img src="img/github.svg" alt="icone github" />
           WendelNunes
         </a>
         <p>An instructor focused on helping pople start programming for web</p>
-        <ul>
-          <li>
+        <ul id="socialLinks">
+          <li class="youtube">
             <a href="https:youtube.com/maykbrito" target="_blank">
               <img src="img/youtube.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
-          <li>
+          <li class="facebook">
             <a href="https:facebook.com/maykbrito" target="_blank">
               <img src="img/facebook.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
-          <li>
+          <li class="instagram">
             <a href="https://www.instagram.com/wendelnunes1/ " target="_blank">
               <img src="img/instagram.svg" alt="Ícone do youtube" />
             </a>
           </li>
 
-          <li>
+          <li class="twitter">
             <a href="https://twitter.com/WendelN96410536" target="_blank">
               <img src="img/twitter.svg" alt="Ícone do youtube" />
             </a>
@@ -53,8 +53,27 @@
         </ul>
       </div>
     </main>
+    <script>
+      const linksSocialMedia = {
+        github: 'WendelSantosNunes',
+        youtube: 'jakelinygracielly',
+        facebook: 'maykbrito',
+        instagram: 'wendelnunes1',
+        twitter: 'WendelN96410536'
+      }
+
+      function changeSocialMediaLinks() {
+        for (let li of socialLinks.children) {
+          const social = li.getAttribute('class')
+          li.children[0].href = `https://${social}.com/${linksSocialMedia[social]}`
+        }
+      }
+
+      changeSocialMediaLinks()
+    </script>
   </body>
 </html>
 
 <!-- #RumoAoPróximoNível - 1-->
 <!-- #Protagonistas-->
+<!-- #ImaginarConstruirTransformar -->
