--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <title>Wendel Santos - DoWhile 2021</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,13 +34,19 @@
         <ul id="socialLinks">
           <li class="instagram">
             <a href="https://www.instagram.com/wendelnunes1/ " target="_blank">
-              <img src="img/instagram.svg" alt="Ícone do youtube" />
+              <img src="img/instagram.svg" alt="Ícone do instagram" />
+            </a>
+          </li>
+
+          <li class="linkedin">
+            <a href="https://www.instagram.com/wendelnunes1/ " target="_blank">
+              <img src="img/linkedin.svg" alt="Ícone do linkedin" />
             </a>
           </li>
 
           <li class="twitter">
             <a href="https://twitter.com/WendelN96410536" target="_blank">
-              <img src="img/twitter.svg" alt="Ícone do youtube" />
+              <img src="img/twitter.svg" alt="Ícone do twitter" />
             </a>
           </li>
         </ul>
@@ -50,3 +59,4 @@
 <!-- #RumoAoPróximoNível - 1-->
 <!-- #Protagonistas-->
 <!-- #ImaginarConstruirTransformar -->
+<!-- #SemLimites -->
