Adicionado uma nova atualização

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
           </li>
 
           <li class="twitter">
-            <a href="https://twitter.com/WendelN96410536" target="_blank">
+            <a
+              href="https://github.com/WendelSantosNunes/Just-Play-/blob/main/index.html"
+              target="_blank"
+            >
               <img src="img/twitter.svg" alt="Ícone do twitter" />
             </a>
           </li>
@@ -50,7 +53,4 @@
   </body>
 </html>
 
-<!-- #RumoAoPróximoNível - 1-->
-<!-- #Protagonistas-->
-<!-- #ImaginarConstruirTransformar -->
-<!-- #SemLimites -->
+<!-- https://twitter.com/WendelN96410536 -->
