Adicionado uma nova atualização

--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
           </li>
 
           <li class="twitter">
-            <a
-              href="https://github.com/WendelSantosNunes/Just-Play-/blob/main/index.html"
-              target="_blank"
-            >
+            <a href="https://twitter.com/WendelN96410536" target="_blank">
               <img src="img/twitter.svg" alt="Ícone do twitter" />
             </a>
           </li>
         </ul>
       </div>
+      <a
+        href="https://github.com/WendelSantosNunes/Just-Play-/blob/main/index.html"
+        >git</a
+      >
     </main>
     <script src="main.js"></script>
   </body>
 </html>
-
-<!-- https://twitter.com/WendelN96410536 -->
